View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028176 | Open CASCADE | OCCT:DRAW | public | 2016-11-30 11:43 | 2018-06-29 21:19 |
Reporter | aml | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0028176: Draw Harness - "reshape" command usage is not properly documented | ||||
Description | According to the "reshape" command help, it is not defined how to get the modified shape theCommands.Add ("reshape", "\n Basic utility for topological modification: " "\n '-replace what with' Replaces 'what' sub-shape with 'with' sub-shape" "\n '-remove what' Removes 'what' sub-shape" "\n Requests '-replace' and '-remove' can be repeated many times.", __FILE__, reshape, g); According to the implementation this command should have the following syntax: reshape resultShape shapeForModifications [-replace what with] [-remove what] | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
It is also necessary to check logic of iteration. Seems like iterator starts from wrong index (1 instead of 3). |
|
Branch CR28176 has been created by aml. SHA-1: 12a6641c819526b0f6b74ce73e2a1d4e673e8d9a Detailed log of new commits: Author: aml Date: Sat Jan 27 11:20:27 2018 +0300 0028176: Draw Harness - "reshape" command usage is not properly documented Help message is corrected for "reshape" command. Command implementation is corrected according OCCT coding rules. |
|
Branch CR28176 has been updated by aml. SHA-1: 4ddbca037a0f86b5bdb16bf0765f53068a687e8c Detailed log of new commits: Author: aml Date: Sat Jan 27 11:24:34 2018 +0300 # Add "static" keyword before function implementation. |
|
Branch CR28176 has been updated forcibly by aml. SHA-1: e9adccb58f212e2a4cf21a579432943cb333ac4b |
|
Dear kgv, could you please take a look at the CR28176 branch? Testing results: http://jenkins-test-10.nnov.opencascade.com/view/CR28176-master-AML/view/COMPARE/ |
|
- di << "Error: shape to remove ('" << a[i] << "') is null\n"; + theDI << "Error: shape to remove ('" << theArgv[i] << "') is null\n"; return 1; ... - di << "Error: result shape is null\n"; + theDI << "Error: result shape is null\n"; return 1; ... <several occurrences> no point for theDI due to raising Tcl exception afterwards, std::cout is enough. + else if ( anOpt == "-remove" ) { ... } No warning/error on passing invalid/unknown arguments ("Syntax error" is usually printed + return 1 in such cases). |
|
Branch CR28176 has been updated by aml. SHA-1: 5a4e976e5aad19350df8edd0e3955d1ef0ddbc1a Detailed log of new commits: Author: aml Date: Mon Jan 29 18:57:49 2018 +0300 # Remarks correction. |
|
+ cout << "Error: invalid syntax" << endl; This message is not helpful - it should include the argument, where error occurred, e.g.: > std::cout << "Syntax error at '" << anArg << "'\n"; - theDI << "Error: result shape is null\n"; + cout << "Error: result shape is null" << endl; endl usage is not practical in this context - \n is enough. |
|
Branch CR28176 has been updated by aml. SHA-1: de2e9db81c9ec0aedf98da0dd16327c7fe53785f Detailed log of new commits: Author: aml Date: Tue Jan 30 07:04:33 2018 +0300 # Remarks correction. |
|
Remarks are corrected. Testing results: http://jenkins-test-10.nnov.opencascade.com:8080/view/CR28176-master-AML/view/COMPARE/. Could you please check? |
|
Patch looks OK. |
|
Combination - OCCT branch : CR28176 SHA - de2e9db81c9ec0aedf98da0dd16327c7fe53785f Products branch : master SHA - 9d16afb77be76e276e46b7b3fc08eb16a4eea45e was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18594.219999999652 / 18668.749999999738 [-0.40%] Products Total CPU difference: 7496.349999999997 / 7517.660000000007 [-0.28%] Windows-64-VC10: OCCT Total CPU difference: 18082.091510098548 / 18085.75753359851 [-0.02%] Products Total CPU difference: 7978.811545899959 / 8002.554898099971 [-0.30%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR28176 has been deleted by kgv. SHA-1: de2e9db81c9ec0aedf98da0dd16327c7fe53785f |
occt: master 9b1d4e7f 2018-01-27 08:20:27 Committer: apn Details Diff |
0028176: Draw Harness - "reshape" command usage is not properly documented Help message is corrected for "reshape" command. Command implementation is corrected according OCCT coding rules. |
Affected Issues 0028176 |
|
mod - src/SWDRAW/SWDRAW_ShapeUpgrade.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-11-30 11:43 | aml | New Issue | |
2016-11-30 11:43 | aml | Assigned To | => apn |
2016-11-30 11:44 | aml | Description Updated | |
2016-11-30 13:24 | aml | Assigned To | apn => ssv |
2016-11-30 13:25 |
|
Note Added: 0060904 | |
2016-11-30 13:25 |
|
Status | new => assigned |
2017-07-20 11:57 | msv | Target Version | 7.2.0 => 7.3.0 |
2018-01-27 11:08 | aml | Assigned To | ssv => aml |
2018-01-27 11:08 | aml | Summary | "reshape" command usage is not properly documented => Draw Harness - "reshape" command usage is not properly documented |
2018-01-27 11:20 | git | Note Added: 0073625 | |
2018-01-27 11:24 | git | Note Added: 0073626 | |
2018-01-29 07:12 | git | Note Added: 0073631 | |
2018-01-29 10:46 | aml | Note Added: 0073639 | |
2018-01-29 10:46 | aml | Assigned To | aml => kgv |
2018-01-29 10:46 | aml | Status | assigned => resolved |
2018-01-29 10:46 | aml | Steps to Reproduce Updated | |
2018-01-29 12:44 | kgv | Note Added: 0073647 | |
2018-01-29 12:44 | kgv | Assigned To | kgv => aml |
2018-01-29 12:44 | kgv | Status | resolved => assigned |
2018-01-29 19:02 | git | Note Added: 0073668 | |
2018-01-29 21:41 | kgv | Note Added: 0073669 | |
2018-01-30 07:04 | git | Note Added: 0073670 | |
2018-01-30 10:17 | aml | Note Added: 0073671 | |
2018-01-30 10:17 | aml | Assigned To | aml => kgv |
2018-01-30 10:17 | aml | Status | assigned => resolved |
2018-01-30 10:39 | aml | Note Edited: 0073671 | |
2018-01-30 10:58 | kgv | Note Added: 0073672 | |
2018-01-30 10:58 | kgv | Assigned To | kgv => bugmaster |
2018-01-30 10:58 | kgv | Status | resolved => reviewed |
2018-01-30 11:10 | apn | Test case number | => Not needed |
2018-01-30 11:10 | apn | Note Added: 0073673 | |
2018-01-30 11:10 | apn | Status | reviewed => tested |
2018-02-03 18:59 | apn | Changeset attached | => occt master 9b1d4e7f |
2018-02-03 18:59 | apn | Assigned To | bugmaster => apn |
2018-02-03 18:59 | apn | Status | tested => verified |
2018-02-03 18:59 | apn | Resolution | open => fixed |
2018-02-05 11:39 | git | Note Added: 0073754 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |