0028176: Draw Harness - "reshape" command usage is not properly documented

Help message is corrected for "reshape" command. Command implementation is corrected according OCCT coding rules.